# airflow-examples

./: .gitignore  404.html  Makefile  README.md  compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
advanced/: index.html
cli/: index.html
dag-basics/: index.html
dag-reference/: index.html
dags/: 001_hello_world.py  002_python_operator.py  003_task_dependencies.py  004_taskflow_api.py  005_xcoms.py  006_branching.py  007_trigger_rules.py  008_templating.py  009_task_groups.py  010_dynamic_tasks.py  011_sensors.py  012_retries_and_callbacks.py  013_custom_operators.py  014_assets.py  015_dag_dependencies.py  016_pools_and_priority.py  017_variables_and_params.py  018_short_circuit.py  019_setup_teardown.py  020_complex_pipeline.py  021_docker_hello.py  022_docker_python_script.py  023_docker_volumes.py  024_docker_env_and_secrets.py  025_docker_pipeline.py  026_docker_custom_image.py  027_docker_network.py  028_docker_resources.py  029_docker_xcom.py  030_docker_mixed_pipeline.py  031_docker_dynamic_images.py  032_docker_compose_task.py  033_http_requests.py  034_http_sensor.py  035_postgres_queries.py  036_sql_pipeline.py  037_generic_transfer.py  038_email_notifications.py  039_ssh_commands.py  040_latest_only.py  (+72 more)
dashboard/: README.md  app.py
data-pipelines/: index.html
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: schema.yml
docs/: advanced.md  cli.md  dag-basics.md  dag-reference.md  data-pipelines.md  external-apis.md  getting-started.md  index.md  integrations.md  operators.md  pipelines.md  providers.md  quality-testing.md  reference.md
exercises/: README.md  ex01_first_dag.py  ex02_taskflow.py  ex03_branching.py  ex04_api_pipeline.py  ex05_quality_check.py
external-apis/: index.html
getting-started/: index.html
integrations/: index.html
monitoring/: prometheus.yml  statsd-mapping.yml
operators/: index.html
pipelines/: index.html
providers/: index.html
quality-testing/: index.html
reference/: index.html
search/: search_index.json
slides/: Makefile  package-lock.json  package.json  slides.md  style.css
slides/pages/: 02-dag-anatomy.md  (+15 more)
tests/: __init__.py  conftest.py  test_apis.py  test_config.py  test_dag_integrity.py  test_etl_logic.py  test_hooks_and_sensors.py  test_operators.py  test_quality.py  test_transforms.py  test_triggers.py
(+19 files in other folders)
